binread/tests/ui/invalid_offset_type.stderr
error[E0308]: mismatched types
 --> $DIR/invalid_offset_type.rs:6:19
  |
6 |     #[br(offset = a)]
  |                   ^ expected `u64`, found `u8`

error[E0308]: mismatched types
 --> $DIR/invalid_offset_type.rs:8:25
  |
8 |     #[br(offset_after = d)]
  |                         ^ expected `u64`, found `u8`
